--- a/templates/main.html
+++ b/templates/main.html
@@ -4,34 +4,40 @@
     <meta charset="UTF-8">
     <title>Galvenā lapa</title>
     <!--- lai dabūtu stilus --->
-    <link href="{{ url_for('static', filename='style//main.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='style/main.css' }}" rel="stylesheet"/>
 </head>
 
 <body>
 
-    <form method="POST">
-        <label for="name">First Name:</label>
-        <input type="text" name="name" id="name"><br><br>
-        <label for="surname">Surname:</label>
-        <input type="text" name="surname" id="surname"><br><br>
-        <input type="submit" value="Submit" name="Submit">
-        <input type="submit" value="View" name="View">
-    </form>
-
     <h1>Galvenā lapa</h1>
+    <div class="button">
+        <!--- a ir links, nospiežot uz to, atvērsies cita lapa --->
+        <a href="{{ url_for('view_data') }}">View data</a>
+    </div>
+
+    <div id="signup_form">
+        <form method="POST">
+            <label for="name">First Name:</label>
+            <input type="text" name="name" id="name"><br><br>
+            <label for="surname">Surname:</label>
+            <input type="text" name="surname" id="surname"><br><br>
+            <input type="submit" value="Submit" name="Submit">
+        </form>
+    </div>
+
     <!--- id - css būs ar # --->
     <div id="count_form">
         <p>Forma</p>
 
-        <form method="POST">
+        <form method="POST" action="{{ url_for('get_count') }}">
             <label for="surname">Key:</label>
             <input type="text" name="key" id="key"><br><br>
             <input type="submit" value="Submit" name="Submit">
         </form>
     </div>
 
-    <div class="button">
-        <p>Link</p>
+    <div class="outter big_red">
+        <h1>Header</h1>
     </div>
 
 </body>
