--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Galvenā lapa</title>
     <!--- lai dabūtu stilus --->
-    <link href="{{ url_for('static', filename='style/main.css' }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='style/main.css') }}" rel="stylesheet"/>
 </head>
 
 <body>
