--- a/templates/table.html
+++ b/templates/table.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Datu tabulas lapa</title>
     <!--- lai dabūtu stilus --->
-    <link href="{{ url_for('static', filename='style/main.css' }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='style/main.css') }}" rel="stylesheet"/>
 </head>
 
 <body>
