--- a/templates/table.html
+++ b/templates/table.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Datu tabulas lapa</title>
     <!--- lai dabūtu stilus --->
-    <link href="{{ url_for('static', filename='style/main.css') }}" rel="stylesheet"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style/main.css') }}"/>
 </head>
 
 <body>
@@ -12,7 +12,6 @@
     <div class="button">
         <a href="{{ url_for('main') }}">Go back</a>
     </div>
-
 
     <table id="customers">
         <thead>
@@ -22,24 +21,16 @@
             </tr>
         </thead>
         <tbody>
-            <!--- lai saprastu, ka būs cikls - {% --->
             {% for row in data_items.values() %}
                 <tr>
-                    <td> {{ row['name'] }}</td>
-                    <td>{{ row['surname'] }}</td>
+                    <td> {{ row['name'] }} </td>
+                    <td> {{ row['surname'] }} </td>
                 </tr>
             {% endfor %}
-
-        <!---
-        {% if x == 0 %}
-            <h1>Vērtība 0</h1>
-        {% elif %}
-            <h1>Vērtība ir liela</h1>
-        {% endif %}
-        --->
-
         </tbody>
     </table>
 
 </body>
 </html>
+
+
